Added styling to font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Responsive Setup</title>
 	<link href="css/index.css" rel="stylesheet">
 	<link href="css/custom-font.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -12,8 +13,15 @@
 </head>
 <body>
 
-	<h1>Custom Font</h1>
-	<a href="#"><i class="icon-heart"></i>Heart</a>
+	<div class="main-content" align="center">
+
+		<h1>Garden Stuff!</h1>
+		
+		<a href="#" class="ease-all"><i class="icon-leaf button"></i></a>
+
+		<a href="#" class="ease-all"><i class="icon-flower button"></i></a>
+	
+	</div>
 
 </body>
 </html>
