added transitions to buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 		<h1>Garden Stuff!</h1>
 		
-		<a href="#" class="ease-all"><i class="icon-leaf button"></i></a>
+		<a href="#" class="ease-all"><i class="icon-leaf buttons "></i></a>
 
-		<a href="#" class="ease-all"><i class="icon-flower button"></i></a>
+		<a href="#" class="ease-all"><i class="icon-flower buttons "></i></a>
 	
 	</div>
 
